--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "monitoreo-ac-frontend",
-  "version": "0.1.0",
+  "name": "temperature-tracker-frontend",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3",
-    "typescript": "^5.3.3",
-    "web-vitals": "^3.5.2"
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.8",
+    "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.0",
+    "typescript": "^5.8.3"
   },
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.1.6"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.5",
+    "vitest": "^1.5.0"
   }
 }
