--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.2.5",
     "vitest": "^1.5.0"
