--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Database Configuration
-DATABASE_URL=postgresql://postgres:Dch2024@localhost:5433/aires
+DATABASE_URL=postgresql://user_bd_postgres:bd-password@localhost:5432/aires
 SECRET_KEY=your_secret_key_here
 JWT_SECRET_KEY=your_jwt_secret_key_here
