--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 DATABASE_URL=postgresql://user_bd_postgres:bd-password@localhost:5432/aires
 SECRET_KEY=your_secret_key_here
 JWT_SECRET_KEY=your_jwt_secret_key_here
+SECRET_KEY=yoursecret_key_here
