--- a/alembic.ini
+++ b/alembic.ini
@@ -60,8 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql+psycopg2://tu_usuario:tu_contraseña@localhost/nombre_tu_bd
+sqlalchemy.url = postgresql://postgres:ed16740939@localhost:5432/aires
 
 
 
